<resources>
    <string name="app_name">Big_Nerd_Ranch</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="question_text">Hello World!</string>
    <string name="correct_toast">Corerct!</string>
    <string name="incorrect_toast">Incorerct!</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>
    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_meadeast">The Suez Canal connects the Red Sea  and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="snack_bar_message">Отменить</string>
    <string name="warning_text">Are you sure want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judment_toast">Cheating is wrong!</string>
    <string name="answer_text">Answer</string>
    <string name="text_api_level">API Level</string>
    <string name="text_btn_criminal_intent">Criminal Intent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_lable">Title</string>
    <string name="crime_details_lable">Details</string>
    <string name="crime_solved_lable">Solved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_title_item_recycler">Crime Title</string>
    <string name="crime_serious_title_item_recycler">Crime Serious Title</string>
    <string name="crime_date_item_recycler">Crime Date</string>


</resources>